--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -108,6 +108,13 @@
                             </div>
                             <button class="btn btn-primary col-md-12">Login</button>
                         </form>
+
+                        <div class="text-center mt-2">
+
+                        <a href="" class="text-decoration-none fs-5">Forget Password</a>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
