--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -33,13 +33,22 @@
                             </div>
 
                             <div class="mb-3">
+                                <label>Enter Mobile Number</label>
+                                <input
+                                        type="text"
+                                        name="mobileNumber"
+                                        class="form-control"
+                                >
+                            </div>
+
+                            <div class="mb-3">
                                 <label>Enter Address</label> <input type="text" name="address"
                                                                     class="form-control">
                             </div>
                             <div class="mb-3">
-                                <label>Enter Qualification</label> <input type="text"
-                                                                          name="qualification" class="form-control">
+                                <label>Enter Qualification</label> <input type="text" name="qualification" class="form-control">
                             </div>
+
                             <div class="mb-3">
                                 <label>Enter Password</label> <input type="text"
                                                                      name="password" class="form-control">
