--- a/src/main/resources/templates/forget_password.html
+++ b/src/main/resources/templates/forget_password.html
@@ -8,18 +8,12 @@
 <body>
     <section>
 
-
         <div class="container p-5">
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <div class="card">
                         <div class="card-header text-center fs-4">Forget password</div>
 
-                        <div th:if="${param.error}" class="alert alert-danger">
-                            Invalid username & Password</div>
-
-                        <div th:if="${param.logout}" class="alert alert-success">
-                            Logout Sucessfully</div>
 
                         <div class="card-body">
                             <form action="/login" method="post">
@@ -32,7 +26,6 @@
                                            class="form-control">
                                 </div>
 
-
                                 <div class="mb-3">
                                     <label>Mobile Number</label>
                                     <input
@@ -41,14 +34,8 @@
                                             placeholder="Enter mobile number "
                                             class="form-control" >
                                 </div>
-                                <button class="btn btn-primary col-md-12">Login</button>
+                                <button class="btn btn-primary col-md-12">Submit</button>
                             </form>
-
-                            <div class="text-center mt-2">
-
-                                <a href="" class="text-decoration-none fs-5">Forget Password</a>
-                            </div>
-
 
                         </div>
                     </div>
@@ -56,8 +43,6 @@
             </div>
 
         </div>
-
-
 
 
     </section>
