--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,12 +24,20 @@
                     <div class="card-body">
                         <form action="createUser" method="post">
                             <div class="mb-3">
-                                <label>Enter Full Name</label> <input type="text"
-                                                                      name="fullName" class="form-control">
+                                <label>Enter Full Name</label>
+                                <input type="text"
+                                       name="fullName"
+                                       class="form-control"
+                                >
+
                             </div>
                             <div class="mb-3">
-                                <label>Enter Email</label> <input type="text" name="email"
-                                                                  class="form-control">
+                                <label>Enter Email</label>
+                                <input type="text"
+                                       name="email"
+                                       class="form-control"
+                                >
+
                             </div>
 
                             <div class="mb-3">
@@ -42,8 +50,12 @@
                             </div>
 
                             <div class="mb-3">
-                                <label>Enter Address</label> <input type="text" name="address"
-                                                                    class="form-control">
+                                <label>Enter Address</label>
+                                <input
+                                        type="text"
+                                        name="address"
+                                        class="form-control"
+                                >
                             </div>
                             <div class="mb-3">
                                 <label>Enter Qualification</label> <input type="text" name="qualification" class="form-control">
@@ -59,7 +71,7 @@
                 </div>
             </div>
         </div>
-
+i
     </div>
 
 
