--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -9,6 +9,42 @@
 
 <section>
 
+    <div class="container p-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div class="card">
+                    <div class="card-header text-center fs-4">Reset Password</div>
+
+                    <div class="card-body">
+                        <form action="/login" method="post">
+
+                            <div class="mb-3">
+                                <label>Enter new password</label>
+                                <input type="text"
+                                       name="psw"
+                                       placeholder="Enter email"
+                                       class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label>Enter confirm password</label>
+                                <input
+                                        type="text"
+                                        name="cpsw"
+                                        placeholder="Enter mobile number "
+                                        class="form-control" >
+                            </div>
+                            <button class="btn btn-primary col-md-12">Submit</button>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </section>
+
 </body>
 </html>
