Forget password's link is attached to login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -111,7 +111,7 @@
 
                         <div class="text-center mt-2">
 
-                        <a href="" class="text-decoration-none fs-5">Forget Password</a>
+                        <a href="loadForgotPassword" class="text-decoration-none fs-5">Forget Password</a>
                         </div>
 
 
