Going to implement the logic behind forget password

--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -34,7 +34,7 @@
                                         placeholder="Enter mobile number "
                                         class="form-control" >
                             </div>
-                            <button class="btn btn-primary col-md-12">Submit</button>
+                            <button class="btn btn-primary col-md-12">Change Password</button>
                         </form>
 
                     </div>
