--- a/src/main/resources/templates/forget_password.html
+++ b/src/main/resources/templates/forget_password.html
@@ -14,9 +14,14 @@
                     <div class="card">
                         <div class="card-header text-center fs-4">Forget password</div>
 
+                        <th:block th:if="${session.msg}">
+                            <p class="text-center fs-4 text-success">[[${session.msg}]]</p>
+                            <th:block th:text="${#session.removeAttribute('msg')}"></th:block>
+                        </th:block>
+
 
                         <div class="card-body">
-                            <form action="/login" method="post">
+                            <form action="forgetPassword" method="post">
 
                                 <div class="mb-3">
                                     <label>Email</label>
