--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -16,7 +16,7 @@
                     <div class="card-header text-center fs-4">Reset Password</div>
 
                     <div class="card-body">
-                        <form action="/login" method="post">
+                        <form action="/changePassword" method="post">
 
                             <div class="mb-3">
                                 <label>Enter new password</label>
@@ -34,6 +34,7 @@
                                         placeholder="Enter mobile number "
                                         class="form-control" >
                             </div>
+                            <input type="hidden" name="id" th:value="${id}">
                             <button class="btn btn-primary col-md-12">Change Password</button>
                         </form>
 
